Added CSV.write example

--- a/session-1/intro.ipynb
+++ b/session-1/intro.ipynb
@@ -8227,7 +8227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "788c36e7",
    "metadata": {},
    "outputs": [
@@ -8261,7 +8261,7 @@
        "   5 │ betty     0.470404            4  4.46703e6      true"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8885,6 +8885,89 @@
    "source": [
     "# Outer joins\n",
     "outerjoin(df, name_df, on=:name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28253a17",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Writing the data to a `.csv` file\n",
+    "\n",
+    "So far we've only imported, but you can write a CSV with `CSV.write`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8687099b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"data-frame\"><p>3 rows × 5 columns</p><table class=\"data-frame\"><thead><tr><th></th><th>a</th><th>b</th><th>c</th><th>d</th><th>e</th></tr><tr><th></th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th><th title=\"Float64\">Float64</th></tr></thead><tbody><tr><th>1</th><td>-0.545725</td><td>-1.90474</td><td>0.523098</td><td>-0.335365</td><td>-0.17412</td></tr><tr><th>2</th><td>-1.76931</td><td>-0.701199</td><td>-0.519759</td><td>-1.13859</td><td>0.277536</td></tr><tr><th>3</th><td>0.967005</td><td>1.16465</td><td>-0.640246</td><td>-1.33811</td><td>1.33266</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ccccc}\n",
+       "\t& a & b & c & d & e\\\\\n",
+       "\t\\hline\n",
+       "\t& Float64 & Float64 & Float64 & Float64 & Float64\\\\\n",
+       "\t\\hline\n",
+       "\t1 & -0.545725 & -1.90474 & 0.523098 & -0.335365 & -0.17412 \\\\\n",
+       "\t2 & -1.76931 & -0.701199 & -0.519759 & -1.13859 & 0.277536 \\\\\n",
+       "\t3 & 0.967005 & 1.16465 & -0.640246 & -1.33811 & 1.33266 \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m3×5 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m a         \u001b[0m\u001b[1m b         \u001b[0m\u001b[1m c         \u001b[0m\u001b[1m d         \u001b[0m\u001b[1m e         \u001b[0m\n",
+       "\u001b[1m     \u001b[0m│\u001b[90m Float64   \u001b[0m\u001b[90m Float64   \u001b[0m\u001b[90m Float64   \u001b[0m\u001b[90m Float64   \u001b[0m\u001b[90m Float64   \u001b[0m\n",
+       "─────┼───────────────────────────────────────────────────────\n",
+       "   1 │ -0.545725  -1.90474    0.523098  -0.335365  -0.17412\n",
+       "   2 │ -1.76931   -0.701199  -0.519759  -1.13859    0.277536\n",
+       "   3 │  0.967005   1.16465   -0.640246  -1.33811    1.33266"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make up some data\n",
+    "ndf = DataFrame(\n",
+    "    randn(1_000, 5),          # 1k rows, 5 columns of standard normals\n",
+    "    [\"a\", \"b\", \"c\", \"d\", \"e\"] # Column names\n",
+    ")\n",
+    "\n",
+    "first(ndf, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ee86c786",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"example-write.csv\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Write the file to disk\n",
+    "CSV.write(\"example-write.csv\", ndf)"
    ]
   },
   {
