Added minor changes

--- a/session-1/intro.ipynb
+++ b/session-1/intro.ipynb
@@ -45,7 +45,26 @@
     "\n",
     "I've been a core developer of Turing.jl and its sattelite packages for four years. Turing.jl is a package for probabilistic programming written in Julia. \n",
     "\n",
-    "I've written oodles of Julia code and consider myself reasonably good at producing performant, idiomatic, and easily-read Julia code."
+    "I've written oodles of Julia code and consider myself reasonably good at producing **performant**, **idiomatic**, and **easily-read** Julia code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d308d0d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Packages I work on\n",
+    "\n",
+    "- [Turing](https://turing.ml/stable/) for dynamic probabilistic programming\n",
+    "- [AbstractMCMC](https://github.com/TuringLang/AbstractMCMC.jl), interface methods for MCMC methods\n",
+    "- [AdvancedMH](https://github.com/TuringLang/AdvancedMH.jl), quick and flexible Metropolis-Hastings methods and their extensions\n",
+    "- [MCMCChains](https://github.com/TuringLang/AdvancedMH.jl), tools for storing and analayzing MCMC posterior samples\n",
+    "- Lots of little private codebases\n",
+    "- Others as needed!"
    ]
   },
   {
@@ -8889,7 +8908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28253a17",
+   "id": "a9857c53",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -8904,7 +8923,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8687099b",
+   "id": "9e311749",
    "metadata": {},
    "outputs": [
     {
@@ -8951,7 +8970,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ee86c786",
+   "id": "b060f136",
    "metadata": {},
    "outputs": [
     {
