--- a/session-2/parallelization-lecture.ipynb
+++ b/session-2/parallelization-lecture.ipynb
@@ -5528,6 +5528,20 @@
     "@time CUDA.CUSOLVER.heevd!('N', 'L', x);    # CUDA -- to get the eigenvalue-vector pair, use heevd!('A', 'L', x)\n",
     "@time eigen(x_h);                           # Serial"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2048a839",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# All done!\n",
+    "\n",
+    "I'll hang around for questions or comments or if anyone wants to pick my brain -- I'd love to hear from you all!"
+   ]
   }
  ],
  "metadata": {
