--- a/session-2/parallelization-lecture.ipynb
+++ b/session-2/parallelization-lecture.ipynb
@@ -5115,7 +5115,7 @@
    ],
    "source": [
     "tasks = RemoteChannel(() -> Channel{Tuple{Function, Float64}}(10))\n",
-    "results = RemoteChannel(() -> Channel{Vector{Float64}}(10))\n",
+    "results = RemoteChannel(() -> Channel{Float64}(10))\n",
     "\n",
     "@everywhere function worker(input, output)\n",
     "    counter = 0\n",
@@ -5455,7 +5455,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.2",
+   "display_name": "Julia 1.6.5",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -5463,7 +5463,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.2"
+   "version": "1.6.5"
   }
  },
  "nbformat": 4,
