Progress on optimization notes

--- a/session-2/parallelization-lecture.ipynb
+++ b/session-2/parallelization-lecture.ipynb
@@ -5120,9 +5120,9 @@
     "@everywhere function worker(input, output)\n",
     "    counter = 0\n",
     "    while counter <= 100\n",
-    "        if isready(tasks) # Check first whether there's anything in the channel, or you'll get stuck!\n",
-    "            task, data = take!(tasks)\n",
-    "            put!(results, task(data))\n",
+    "        if isready(input) # Check first whether there's anything in the channel, or you'll get stuck!\n",
+    "            task, data = take!(input)\n",
+    "            put!(output, task(data))\n",
     "        end\n",
     "        counter += 1\n",
     "    end\n",
