--- a/session-1/intro.ipynb
+++ b/session-1/intro.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "# Why does anything I say mean anything?\n",
     "\n",
-    "I've been a core developer of Turing.jl and its sattelite packages for four years. Turing.jl is a package for probabilistic programming written in Julia. \n",
+    "I've been a core developer of Turing.jl and its satellite packages for four years. Turing.jl is a package for probabilistic programming written in Julia. \n",
     "\n",
     "I've written oodles of Julia code and consider myself reasonably good at producing **performant**, **idiomatic**, and **easily-read** Julia code."
    ]
@@ -62,7 +62,7 @@
     "- [Turing](https://turing.ml/stable/) for dynamic probabilistic programming\n",
     "- [AbstractMCMC](https://github.com/TuringLang/AbstractMCMC.jl), interface methods for MCMC methods\n",
     "- [AdvancedMH](https://github.com/TuringLang/AdvancedMH.jl), quick and flexible Metropolis-Hastings methods and their extensions\n",
-    "- [MCMCChains](https://github.com/TuringLang/AdvancedMH.jl), tools for storing and analayzing MCMC posterior samples\n",
+    "- [MCMCChains](https://github.com/TuringLang/AdvancedMH.jl), tools for storing and analyzing MCMC posterior samples\n",
     "- Lots of little private codebases\n",
     "- Others as needed!"
    ]
@@ -81,7 +81,7 @@
     "I'm going to be presenting one workshop a week. Topics are tailored towards researchers who need to work with non-standard statistical methods or computational tools.\n",
     "\n",
     "- Julia Basics (today)\n",
-    "- Parallelization for Economists (Februrary)\n",
+    "- Parallelization for Economists (February)\n",
     "- Optimization and Automatic Differentiation (March)\n",
     "- Performant Programming and Best Practices (April)\n",
     "- Bayesian Inference and Probabilistic Programming (May)\n",
