--- a/session-2/parallelization-lecture.ipynb
+++ b/session-2/parallelization-lecture.ipynb
@@ -213,7 +213,7 @@
     "## What's inside your CPU (the important conceptual ones)?\n",
     "\n",
     "- The __control unit (CU)__, which turns binary into timing and control signals.\n",
-    "- The __arithmatic logic unit (ALU)__, which does \"the math\".\n",
+    "- The __arithmetic logic unit (ALU)__, which does \"the math\".\n",
     "- The __cache__, which is a place to store data and instructions for quick access. The cache stores quick-to-access versions of what is in main memory (RAM).\n",
     "- The __registers__, tiny little caches that the ALU can get to directly.\n"
    ]
@@ -300,7 +300,7 @@
     }
    },
    "source": [
-    "This is why you may have heard of _vectorization_ being fast, especially if you come from an R world where vectoriazation is a good way to get free speed.\n",
+    "This is why you may have heard of _vectorization_ being fast, especially if you come from an R world where vectorization is a good way to get free speed.\n",
     "\n",
     "Vectorization means you can keep the instruction (`sin`, for example) in L1 (or the register) and pump data through, meaning you don't have to do cache checks for new instructions."
    ]
