--- a/session-3/optimization-lecture.ipynb
+++ b/session-3/optimization-lecture.ipynb
@@ -1831,7 +1831,7 @@
    },
    "source": [
     "\n",
-    "Please install the opimization package `Optim.jl` with\n",
+    "Please install the optimization package `Optim.jl` with\n",
     "\n",
     "```julia\n",
     "] add Optim\n",
