--- a/session-4/speed-lecture.ipynb
+++ b/session-4/speed-lecture.ipynb
@@ -47,7 +47,7 @@
     "- The sessions are two hours now! \n",
     "- Today is all lecture! There's going to be a ton of examples for us to walk through together.\n",
     "- Ask questions when needed -- please interrupt me!\n",
-    "- I assume you have Julia and some text editor evailable to you. If you don't have it, please download a Julia binary here: https://julialang.org/downloads/"
+    "- I assume you have Julia and some text editor available to you. If you don't have it, please download a Julia binary here: https://julialang.org/downloads/"
    ]
   },
   {
@@ -1022,7 +1022,7 @@
    "source": [
     "## Abstract typed arrays are bad\n",
     "\n",
-    "Arrays that are not specifically typed can be _really inefficient_, because Julia has to alocate memory assuming you can put literally anything in them. \n",
+    "Arrays that are not specifically typed can be _really inefficient_, because Julia has to allocate memory assuming you can put literally anything in them. \n",
     "\n",
     "If you tell it an array will _only_ hold `Float64`, it can assign 64-bit storage for each element inside it, and you benefit from all kinds of fancy math specializations."
    ]
